JS-259 Do not warn against active Node.js versions